fixed image overlap on tablet version

--- a/frontend/src/css/MenuSection.css
+++ b/frontend/src/css/MenuSection.css
@@ -26,6 +26,7 @@
   .menu-section
   {
     grid-template-columns: minmax(auto, 900px);
+    margin-top: 55px;
   }
 
   .menu-filter-wrapper
@@ -44,6 +45,7 @@
   .menu-section
   {
     grid-template-columns: 150px minmax(auto, 900px) 150px;
+    margin-top: 55px;
   }
 }
 
